# Proyecto

./: README.md
Circuitos/: _autosave-kicad taller carlassara.kicad_pcb  kicad taller carlassara.kicad_pro
Codigo/: CMakeLists.txt  main.c
docs/: Propuesta de proyecto.docx
